<resources>
    <string name="app_name">Gribbble</string>
    <string name="drawer_menu_item_home">Home</string>
    <string name="drawer_menu_item_likes">Likes</string>
    <string name="drawer_menu_item_buckets">Buckets</string>
    <string name="title_home">Gribbble</string>
    <string name="title_likes">Likes</string>
    <string name="title_buckets">Buckets</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="shot_image_content_description">shot image</string>

    <string name="shot_count">{0,choice,0#0 shot|1#1 shot|1&lt;{0} shots}</string>
    <string name="shot_author_picture">Shot author picture</string>
    <string name="like">like</string>
    <string name="bucket">bucket</string>
    <string name="share">Share</string>
    <string name="activity_login_icon">Gribbble login icon</string>
    <string name="log_into_dribbble_text">Log into Gribbble</string>
    <string name="auth_activity_title">Log into Gribbble</string>
    <string name="logout">Log out</string>
    <string name="new_bucket_name">Bucket name</string>
    <string name="new_bucket_description">Bucket description</string>
    <string name="new_bucket_title">New Bucket</string>
    <string name="new_bucket_create">Create</string>
    <string name="new_bucket_cancel">Cancel</string>
    <string name="shot_count_single">%1$d shot</string>
    <string name="shot_count_plural">%1$d shots</string>
    <string name="project_count_single">%1$d project</string>
    <string name="project_count_plural">%1$d projects</string>
    <string name="follower_count_single">%1$d follower</string>
    <string name="follower_count_plural">%1$d followers</string>
    <string name="following_count_single">%1$d following</string>
    <string name="following_count_plural">%1$d followings</string>
    <string name="bucket_count_single">%1$d bucket</string>
    <string name="bucket_count_plural">%1$d buckets</string>
    <string name="like_count_single">%1$d like</string>
    <string name="like_count_plural">%1$d likes</string>
    <string name="choose_bucket">Choose buckets</string>
    <string name="shot_detail_loading_buckets">Loading buckets, just one second...</string>
    <string name="user_detail_checking_following">Checking following status, just one second...</string>
    <string name="save">Save</string>
    <string name="share_shot">Share shot</string>
    <string name="required">*required</string>
    <string name="bucket_edit">Edit %1$s</string>
    <string name="GIF">GIF</string>
    <string name="Fresco_image_full_downloaded">10000</string>
    <string name="login">Tap to log in</string>
    <string name="not_logged_in_error">Please logged in to %1$s</string>
    <string name="drawer_menu_item_animated">Animated GIFs</string>
    <string name="title_animated_gif">Animated GIFs</string>
    <string name="error_when_loading_data">Error when loading data</string>
    <string name="drawer_menu_item_most_recent">Most recent</string>
    <string name="drawer_menu_item_most_viewed">Most viewed</string>
    <string name="drawer_menu_item_most_commented">Most commented</string>
    <string name="title_most_commented">Most commented</string>
    <string name="title_most_recent">Most recent</string>
    <string name="title_most_viewed">Most viewed</string>
    <string name="time_filter_menu_item_home">Now</string>
    <string name="time_filter_menu_item_now">Now</string>
    <string name="time_filter_menu_item_last_week">Last week</string>
    <string name="time_filter_menu_item_last_month">Last month</string>
    <string name="time_filter_menu_item_last_year">Last year</string>
    <string name="time_filter_menu_item_most_all_time">All time</string>
    <string name="filter">Filter</string>
    <string name="drawer_menu_item_popularity">Most popular</string>
    <string name="title_popular">Popular</string>
    <string name="refresh">Refresh</string>
    <string name="follow">Follow</string>
    <string name="following">UN-Follow</string>
    <string name="drawer_menu_item_following">My Following</string>
    <string name="my_following_shots">My following shots</string>
    <string name="drawer_menu_item_themes">Themes</string>
    <string name="title_themes">Choose a theme</string>
    <string name="Select_theme">Select theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_blue">blue</string>
    <string name="theme_yellow">yellow</string>
    <string name="theme_green">green</string>
    <string name="theme_purple">purple</string>
    <string name="theme_teal">teal</string>
    <string name="theme_default_content_description">default theme</string>
    <string name="theme_blue_content_description">blue theme</string>
    <string name="theme_yellow_content_description">yellow theme</string>
    <string name="theme_night_mode">Night Mode</string>
    <string name="comment_author_picture">comment author picture</string>
    <string name="comments">Comments</string>
    <string name="shots">shots</string>
    <string name="image_details">Image details</string>
</resources>
