<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/drawer_menu_item_home"
        android:checked="true"
        android:title="@string/drawer_menu_item_popularity"
        android:icon="@drawable/ic_stars_black_18dp"/>
    <item
        android:id="@+id/drawer_menu_item_animated"
        android:title="@string/drawer_menu_item_animated"
        android:icon="@drawable/ic_movie_black_18dp"/>
    <item
        android:id="@+id/drawer_menu_item_most_recent"
        android:title="@string/drawer_menu_item_most_recent"
        android:icon="@drawable/ic_query_builder_black_18dp"/>
    <item
        android:id="@+id/drawer_menu_item_most_viewed"
        android:title="@string/drawer_menu_item_most_viewed"
        android:icon="@drawable/ic_visibility_black_18dp"/>
    <item
        android:id="@+id/drawer_menu_item_most_commented"
        android:title="@string/drawer_menu_item_most_commented"
        android:icon="@drawable/ic_comment_black_18dp"/>
</group>

<group android:id="@+id/second_group"
       android:checkableBehavior="single">
    <item
        android:id="@+id/drawer_menu_item_likes"
        android:title="@string/drawer_menu_item_likes"
        android:icon="@drawable/ic_favorite_black_18dp"/>
    <item
        android:id="@+id/drawer_menu_item_buckets"
        android:title="@string/drawer_menu_item_buckets"
        android:icon="@drawable/ic_inbox_black_18dp"/>
</group>

</menu>